--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -701,10 +701,246 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_in_list(list, item):\n",
+    "    '''\n",
+    "    check if an item is in a list\n",
+    "    '''\n",
+    "    if item in list:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-10.516506892973101, pvalue=9.117796626762956e-26, df=13517.027964676321)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "card_game_ratings = ready_data[ready_data['category_list'].apply(lambda x: is_in_list(x, 'Card Game')) == 1]['average']\n",
+    "non_card_game_ratings = ready_data[ready_data['category_list'].apply(lambda x: is_in_list(x, 'Card Game')) == 0]['average']\n",
+    "\n",
+    "ttest_ind(card_game_ratings, non_card_game_ratings, equal_var=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "把numerical features里面corr最高的几组3列出来"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variable 1</th>\n",
+       "      <th>Variable 2</th>\n",
+       "      <th>Correlation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>playingtime</td>\n",
+       "      <td>maxplaytime</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>num_x</td>\n",
+       "      <td>rank</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>users_rated</td>\n",
+       "      <td>owned</td>\n",
+       "      <td>0.985501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>wanting</td>\n",
+       "      <td>wishing</td>\n",
+       "      <td>0.939377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>year</td>\n",
+       "      <td>yearpublished</td>\n",
+       "      <td>0.874172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>playingtime</td>\n",
+       "      <td>minplaytime</td>\n",
+       "      <td>0.856547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>minplaytime</td>\n",
+       "      <td>maxplaytime</td>\n",
+       "      <td>0.856547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>bayes_average</td>\n",
+       "      <td>wanting</td>\n",
+       "      <td>0.831362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>owned</td>\n",
+       "      <td>trading</td>\n",
+       "      <td>0.824295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>users_rated</td>\n",
+       "      <td>wishing</td>\n",
+       "      <td>0.812746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>users_rated</td>\n",
+       "      <td>trading</td>\n",
+       "      <td>0.809579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>owned</td>\n",
+       "      <td>wishing</td>\n",
+       "      <td>0.796129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>bayes_average</td>\n",
+       "      <td>wishing</td>\n",
+       "      <td>0.774552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>num_x</td>\n",
+       "      <td>average</td>\n",
+       "      <td>-0.740138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>rank</td>\n",
+       "      <td>average</td>\n",
+       "      <td>-0.740138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>num_x</td>\n",
+       "      <td>num_y</td>\n",
+       "      <td>0.716851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>rank</td>\n",
+       "      <td>num_y</td>\n",
+       "      <td>0.716851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>users_rated</td>\n",
+       "      <td>wanting</td>\n",
+       "      <td>0.709147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>num_x</td>\n",
+       "      <td>bayes_average</td>\n",
+       "      <td>-0.700860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>rank</td>\n",
+       "      <td>bayes_average</td>\n",
+       "      <td>-0.700860</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Variable 1     Variable 2  Correlation\n",
+       "0     playingtime    maxplaytime     1.000000\n",
+       "1           num_x           rank     1.000000\n",
+       "2     users_rated          owned     0.985501\n",
+       "3         wanting        wishing     0.939377\n",
+       "4            year  yearpublished     0.874172\n",
+       "5     playingtime    minplaytime     0.856547\n",
+       "6     minplaytime    maxplaytime     0.856547\n",
+       "7   bayes_average        wanting     0.831362\n",
+       "8           owned        trading     0.824295\n",
+       "9     users_rated        wishing     0.812746\n",
+       "10    users_rated        trading     0.809579\n",
+       "11          owned        wishing     0.796129\n",
+       "12  bayes_average        wishing     0.774552\n",
+       "13          num_x        average    -0.740138\n",
+       "14           rank        average    -0.740138\n",
+       "15          num_x          num_y     0.716851\n",
+       "16           rank          num_y     0.716851\n",
+       "17    users_rated        wanting     0.709147\n",
+       "18          num_x  bayes_average    -0.700860\n",
+       "19           rank  bayes_average    -0.700860"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlations = ready_data.select_dtypes(include='number').corr()\n",
+    "num_var = len(correlations)\n",
+    "vars = list(correlations.index)\n",
+    "cor_values = []\n",
+    "for i in range(num_var):\n",
+    "    for j in range(i+1, num_var):\n",
+    "        cor_values.append((vars[i], vars[j], correlations.iloc[i, j]))\n",
+    "cor_values.sort(key=lambda x: x[2]**2, reverse=True)\n",
+    "pd.DataFrame(cor_values[:20], columns=['Variable 1', 'Variable 2', 'Correlation'])"
    ]
   },
   {
