--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -4,43 +4,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SI618 Project Part 2: Analysis"
+    "# <a id='toc1_'></a>[SI618 Project Part 2: Analysis](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Title — *World of Board Games: What decide their popularity and ratings?*"
+    "# <a id='toc2_'></a>[Project Title — *World of Board Games: What decide their popularity and ratings?*](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Team Members\n",
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [SI618 Project Part 2: Analysis](#toc1_)    \n",
+    "- [Project Title — *World of Board Games: What decide their popularity and ratings?*](#toc2_)    \n",
+    "  - [Team Members](#toc2_1_)    \n",
+    "  - [Descriptive Analysis](#toc2_2_)    \n",
+    "    - [Rating of the games](#toc2_2_1_)    \n",
+    "    - [Popularity of the games](#toc2_2_2_)    \n",
+    "    - [Numerical factors of the games](#toc2_2_3_)    \n",
+    "      - [Year published](#toc2_2_3_1_)    \n",
+    "      - [Player number](#toc2_2_3_2_)    \n",
+    "      - [Playing time](#toc2_2_3_3_)    \n",
+    "    - [Categorical factors of games](#toc2_2_4_)    \n",
+    "      - [Game category](#toc2_2_4_1_)    \n",
+    "      - [Game mechanics](#toc2_2_4_2_)    \n",
+    "      - [Game publishers](#toc2_2_4_3_)    \n",
+    "      - [Game designers](#toc2_2_4_4_)    \n",
+    "  - [Inferential Statistics](#toc2_3_)    \n",
+    "    - [Category](#toc2_3_1_)    \n",
+    "    - [Year](#toc2_3_2_)    \n",
+    "    - [Correlations](#toc2_3_3_)    \n",
+    "  - [Graphical Analysis](#toc2_4_)    \n",
+    "    - [Correlations](#toc2_4_1_)    \n",
+    "    - [Difference discovered in t test](#toc2_4_2_)    \n",
+    "    - [Playing time and number of players](#toc2_4_3_)    \n",
+    "  - [Comparative Analysis](#toc2_5_)    \n",
+    "    - [Divided by years(decades)](#toc2_5_1_)    \n",
+    "    - [Relationship of numeric variables](#toc2_5_2_)    \n",
+    "  - [Multivariate Analysis](#toc2_6_)    \n",
+    "    - [Two dividing variables we introduced before:](#toc2_6_1_)    \n",
+    "    - [Minplayers](#toc2_6_2_)    \n",
+    "  - [Synthesis](#toc2_7_)    \n",
+    "  - [Reflection](#toc2_8_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='toc2_1_'></a>[Team Members](#toc0_)\n",
     "- Keqing Lu (keqinglu)\n",
     "- Xiyuan Wang (denniswx)\n",
     "- Fangqing Yuan (fangqing)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Table of Contents\n",
-    "* [Descriptive Statistics](#Descriptive_Statistics)\n",
-    "    * [Section 1.1](#section_1_1)\n",
-    "* [Chapter 2](#chapter2)\n",
-    "    * [Section 2.1](#section_2_1)\n",
-    "        * [Sub Section 2.1.1](#sub_section_2_1_1)\n",
-    "        * [Sub Section 2.1.2](#sub_section_2_1_2)\n",
-    "* [Chapter 3](#chapter3)\n",
-    "    * [Section 3.1](#section_3_1)\n",
-    "        * [Sub Section 3.1.1](#sub_section_3_1_1)\n",
-    "        * [Sub Section 3.1.2](#sub_section_3_1_2)\n",
-    "    * [Section 3.2](#section_3_2)\n",
-    "        * [Sub Section 3.2.1](#sub_section_3_2_1)"
    ]
   },
   {
@@ -302,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Descriptive Statistics <a id=\"Descriptive_Statistics\"></a>"
+    "## <a id='toc2_2_'></a>[Descriptive Analysis](#toc0_)"
    ]
   },
   {
@@ -363,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rating of the games"
+    "### <a id='toc2_2_1_'></a>[Rating of the games](#toc0_)"
    ]
   },
   {
@@ -467,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Popularity of the games"
+    "### <a id='toc2_2_2_'></a>[Popularity of the games](#toc0_)"
    ]
   },
   {
@@ -721,7 +749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numerical factors of the games"
+    "### <a id='toc2_2_3_'></a>[Numerical factors of the games](#toc0_)"
    ]
   },
   {
@@ -888,7 +916,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Year published"
+    "#### <a id='toc2_2_3_1_'></a>[Year published](#toc0_)"
    ]
   },
   {
@@ -938,7 +966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Player number"
+    "#### <a id='toc2_2_3_2_'></a>[Player number](#toc0_)"
    ]
   },
   {
@@ -1058,7 +1086,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Playing time"
+    "#### <a id='toc2_2_3_3_'></a>[Playing time](#toc0_)"
    ]
   },
   {
@@ -1220,7 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Categorical factors of games"
+    "### <a id='toc2_2_4_'></a>[Categorical factors of games](#toc0_)"
    ]
   },
   {
@@ -1254,7 +1282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Game category"
+    "#### <a id='toc2_2_4_1_'></a>[Game category](#toc0_)"
    ]
   },
   {
@@ -1350,7 +1378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Game mechanics"
+    "#### <a id='toc2_2_4_2_'></a>[Game mechanics](#toc0_)"
    ]
   },
   {
@@ -1446,7 +1474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Game publishers"
+    "#### <a id='toc2_2_4_3_'></a>[Game publishers](#toc0_)"
    ]
   },
   {
@@ -1542,7 +1570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Game designers "
+    "#### <a id='toc2_2_4_4_'></a>[Game designers](#toc0_)"
    ]
   },
   {
@@ -1638,14 +1666,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inferential Statistics"
+    "## <a id='toc2_3_'></a>[Inferential Statistics](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Category"
+    "### <a id='toc2_3_1_'></a>[Category](#toc0_)"
    ]
   },
   {
@@ -1762,7 +1790,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Year"
+    "### <a id='toc2_3_2_'></a>[Year](#toc0_)"
    ]
   },
   {
@@ -1852,7 +1880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlations"
+    "### <a id='toc2_3_3_'></a>[Correlations](#toc0_)"
    ]
   },
   {
@@ -2010,7 +2038,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Graphical Analysis"
+    "## <a id='toc2_4_'></a>[Graphical Analysis](#toc0_)"
    ]
   },
   {
@@ -2024,7 +2052,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlations\n",
+    "### <a id='toc2_4_1_'></a>[Correlations](#toc0_)\n",
     "\n",
     "First we may visualize the correlation among popularity-related variables and Bayesian average"
    ]
@@ -2249,7 +2277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Difference discovered in t test"
+    "### <a id='toc2_4_2_'></a>[Difference discovered in t test](#toc0_)"
    ]
   },
   {
@@ -2308,7 +2336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Playing time and number of players"
+    "### <a id='toc2_4_3_'></a>[Playing time and number of players](#toc0_)"
    ]
   },
   {
@@ -2392,7 +2420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparative Analysis"
+    "## <a id='toc2_5_'></a>[Comparative Analysis](#toc0_)"
    ]
   },
   {
@@ -2406,7 +2434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Divided by years(decades)"
+    "### <a id='toc2_5_1_'></a>[Divided by years(decades)](#toc0_)"
    ]
   },
   {
@@ -2566,7 +2594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Relationship of numeric variables"
+    "### <a id='toc2_5_2_'></a>[Relationship of numeric variables](#toc0_)"
    ]
   },
   {
@@ -2687,14 +2715,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multivariate Analysis"
+    "## <a id='toc2_6_'></a>[Multivariate Analysis](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Two dividing variables we introduced before:"
+    "### <a id='toc2_6_1_'></a>[Two dividing variables we introduced before:](#toc0_)"
    ]
   },
   {
@@ -2905,7 +2933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Minplayers"
+    "### <a id='toc2_6_2_'></a>[Minplayers](#toc0_)"
    ]
   },
   {
@@ -3145,14 +3173,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Synthesis"
+    "## <a id='toc2_7_'></a>[Synthesis](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reflection"
+    "## <a id='toc2_8_'></a>[Reflection](#toc0_)"
    ]
   },
   {
