--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,10 +956,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "yearpublished\n",
+       "2017    1325\n",
+       "2018    1321\n",
+       "2016    1291\n",
+       "2019    1258\n",
+       "2015    1147\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ready_data.yearpublished.value_counts().head(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The year with most games published is 2017, while the top 10 years constitute the entire 2010s."
+    "The year with most games published is 2017, while the top 5 years are all in the 2010s."
    ]
   },
   {
@@ -1143,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1186,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3180,7 +3206,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Through our analysis, we were able to get some insight into our original research questions:\n",
+    "- What characteristics a board game has?\n",
+    "- What are the measurements for a board game's popularity and how well it is appreciated by its players?\n",
+    "- What factors, like playing time, minimum age, and number of players, affect the popularity of board games?\n",
+    "- What factors, like category and theme, affect the rating of board games?\n",
+    "- Are popular board games more highly rated, and vise versa?\n",
+    "\n",
+    "Through the descriptive statistics, we can find that the board games have both numerical and categorical features, and there are ownership/trading numbers demonstrating each game's popularity, as well as average ratings demonstrating the appreciation of players.\n",
+    "\n",
+    "Through inferential statistics such as linear correlation, we found that although there is not a high correlation between game ownership and average rating, the correlation with bayes rating is rather high, which indicates the number of player ratings may have been considered in the bayes statistic. We show the relationship between factors and select some representative fields for further analysis. We then conducted significance test on them to show whether they statistically influence the popularity and rating of the games. We have found that the year of publishing has a significant influence on both game popularity and rating: popularity varies over time, while newer games tend to have higher rating; While player numbers does not have a significant influence on game rating, it does affect game popularity, as games with lower player numbers tend to be more popular. Game categories, such as Card Game vs non-Card Game, does have a influence on game rating. Our graphical analysis further visualize these trends.\n",
+    "\n",
+    "By combining the two original datasets, we are now able to analyze how the features of the game affect the game's popularity and rating. Since they were separate in the two original datasets, this would not have been possible with them in isolation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <a id='toc2_8_'></a>[Reflection](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset we chose was rather large, with over 20,000 entries and around 40 combined fields. Despite the efforts we have made in the first part to merge and clean the data, we still encountered some challenges during our second part analysis. For example, the existence of unreasonable values in fields like min and max players/playing time. It was difficult to validate individually and filter them out, so we decided to acknowledge their presence. Also, the continuous nature of the numerical features and the overlapping nature of categorical features meant there was not a obvious way of doing comparative analysis on the data. Nevertheless, we still came up with ways to dissect the data and found some significant trends.\n",
+    "\n",
+    "The limitation of our analysis come from the presence of unreasonable data, which affects the validity of our numerical analysis to some extent; also, we have not included some fields of data that are relatively hard to extract for our analysis. For further research and improvements, we may consider utilizing more robust methods for data manipulation to get more comprehensive results."
    ]
   },
   {
