--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -18,6 +18,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How to use the Table of Contents:\n",
+    "\n",
+    "- Click the links in the ToC: lead you to the designated sections\n",
+    "- Click the titles of the sections in the body of the report: lead you back to the ToC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
     "- [SI618 Project Part 2: Analysis](#toc1_)    \n",
     "- [Project Title — *World of Board Games: What decide their popularity and ratings?*](#toc2_)    \n",
@@ -2303,6 +2313,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The correlations are quite visible. Also we may see popularity variables have large outliers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <a id='toc2_4_2_'></a>[Difference discovered in t test](#toc0_)"
    ]
   },
@@ -3215,7 +3232,7 @@
     "\n",
     "Through the descriptive statistics, we can find that the board games have both numerical and categorical features, and there are ownership/trading numbers demonstrating each game's popularity, as well as average ratings demonstrating the appreciation of players.\n",
     "\n",
-    "Through inferential statistics such as linear correlation, we found that although there is not a high correlation between game ownership and average rating, the correlation with bayes rating is rather high, which indicates the number of player ratings may have been considered in the bayes statistic. We show the relationship between factors and select some representative fields for further analysis. We then conducted significance test on them to show whether they statistically influence the popularity and rating of the games. We have found that the year of publishing has a significant influence on both game popularity and rating: popularity varies over time, while newer games tend to have higher rating; While player numbers does not have a significant influence on game rating, it does affect game popularity, as games with lower player numbers tend to be more popular. Game categories, such as Card Game vs non-Card Game, does have a influence on game rating. Our graphical analysis further visualize these trends.\n",
+    "Through inferential statistics such as linear correlation, we found that although there is not a high correlation between game ownership and average rating, the correlation with Bayesian rating mean is rather high, which indicates the number of player ratings may have been considered in the Bayesian statistic. We show the relationship between factors and select some representative fields for further analysis. We then conducted significance test on them to show whether they statistically influence the popularity and rating of the games. We have found that the year of publishing has a significant influence on both game popularity and rating: popularity varies over time, while newer games tend to have higher rating; While player numbers does not have a significant influence on game rating, it does affect game popularity, as games with lower player numbers tend to be more popular. Game categories, such as Card Game vs non-Card Game, does have a influence on game rating. Our graphical analysis further visualize these trends.\n",
     "\n",
     "By combining the two original datasets, we are now able to analyze how the features of the game affect the game's popularity and rating. Since they were separate in the two original datasets, this would not have been possible with them in isolation."
    ]
@@ -3233,7 +3250,14 @@
    "source": [
     "The dataset we chose was rather large, with over 20,000 entries and around 40 combined fields. Despite the efforts we have made in the first part to merge and clean the data, we still encountered some challenges during our second part analysis. For example, the existence of unreasonable values in fields like min and max players/playing time. It was difficult to validate individually and filter them out, so we decided to acknowledge their presence. Also, the continuous nature of the numerical features and the overlapping nature of categorical features meant there was not a obvious way of doing comparative analysis on the data. Nevertheless, we still came up with ways to dissect the data and found some significant trends.\n",
     "\n",
-    "The limitation of our analysis come from the presence of unreasonable data, which affects the validity of our numerical analysis to some extent; also, we have not included some fields of data that are relatively hard to extract for our analysis. For further research and improvements, we may consider utilizing more robust methods for data manipulation to get more comprehensive results."
+    "The limitation of our analysis come from the presence of unreasonable data, which affects the validity of our numerical analysis to some extent; also, we have not included some fields of data that are relatively hard to extract for our analysis. Also, the size of the data prevents us from analyzing all variables and potential combinations, our report was dedicated to cover the most representative columns of different types of characteristics of the board games. For further research and improvements, we may consider utilizing more robust methods for data manipulation to get more comprehensive results.\n",
+    "\n",
+    "In future machine learning task, we may need to address the following issues in advance:\n",
+    "\n",
+    "- Use techniques such as regression to identify outliers and potential unreasonable/wrong data and impute more reasonable ones;\n",
+    "- For variables like published year, as we found out that dividing the data by it could show significant difference in average ratings, we may need to decide whether to treat it as numeric or categorical variable;\n",
+    "- How to treat lists and if we need to invent new variables;\n",
+    "- What variables are suited to be used for stratified data splitting;"
    ]
   },
   {
