--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -755,6 +755,7 @@
     "  - pipeline: scaling, standardize, dummy variable\n",
     "  - PCA (optional)\n",
     "- Classification\n",
+    "  - train_test_split\n",
     "  - LR, Tree, RF, XGBoost, SVM, try all\n",
     "  - design model measurement: precision, accuracy score, F1, recall, AUC (be careful we have a 3-class category)\n",
     "  - Cross Validation get optimal parameters (fine tuning the hyper-parameters)\n",
